--- a/src/app/calendar/calendar-event/calendar-event.component.html
+++ b/src/app/calendar/calendar-event/calendar-event.component.html
@@ -1,7 +1,7 @@
 <div class="calendar-event">
   <pc-culture [id]="(cultureRef$ | async)?.id"
               [showBed]="true"
-              [showBedPreparation]="false"
+              [showBedPreparation]="(event$ | async).type === 'BED_PREPARATION'"
               [showHarvest]="false"
               [showIcon]="true"
               [showNursing]="false"
