fix crop file query type

--- a/src/app/shared/crop-filter/crop-filter.component.html
+++ b/src/app/shared/crop-filter/crop-filter.component.html
@@ -13,7 +13,7 @@
                   name="query-type"
   >
     <ng-template let-item>
-      <pc-crop-search-query-type [type]="item"></pc-crop-search-query-type>
+      <pc-crop-search-query-type [type]="item.value"></pc-crop-search-query-type>
     </ng-template>
   </p-selectButton>
 
